talent attr fix

--- a/WarhammerSoulbound.html
+++ b/WarhammerSoulbound.html
@@ -285,8 +285,8 @@
                                 <option value = "WITCH-SIGHT">WITCH-SIGHT</option>
                                 <option value = "ZHARRGRIM">ZHARRGRIM</option>
                             </select>
-                            <textarea name="attr_talenttext"></textarea>
-                            <button name="chat_talent" type="roll" value="@{attr_talenttext}"></button>
+                            <textarea name="attr_talent_text"></textarea>
+                            <button name="chat_talent" type="roll" value="@{talent_text}"></button>
                         </fieldset>
                     </div>                    
                 </div>
